--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -1,7 +1,8 @@
 body {
   color: #000;
-  background-color: #fdf8e3
+  // background-color: #fdf8e3
   // 変更したviewをデプロイできるかテストするため背景を白色からクリーム色に変更;
+  background-color: blue;
 }
 
 .header {
